--- a/Extranet.mvc/Views/Account/Login.cshtml
+++ b/Extranet.mvc/Views/Account/Login.cshtml
@@ -5,52 +5,88 @@
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
-	ViewData["Title"] = "User Login";
+    ViewData["Title"] = "Log in";
 }
 
-<div class="in">
-	<section id="login">
-		<h2>@ViewData["Title"].</h2>
-
-		<p>Please enter your login details below.  Please remember your password is case sensitive.</p>
-
-		<form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-			<div asp-validation-summary="All"></div>
-			<div class="rw">
-				<div class="a"><label asp-for="Email"></label></div>
-				<div class="b">
-					<input asp-for="Email" />
-					<span asp-validation-for="Email"></span>
-				</div>
-			</div>
-			<div class="rw">
-				<div class="a"><label asp-for="Password"></label></div>
-				<div class="b">
-					<input asp-for="Password" />
-					<span asp-validation-for="Password"></span>
-				</div>
-			</div>
-			<div class="rw">
-				<div class="a"></div>
-				<div class="b">
-					<label asp-for="RememberMe">
-						<input asp-for="RememberMe" />
-						@Html.DisplayNameFor(m => m.RememberMe)
-					</label>
-				</div>
-			</div>
-			<div class="btn">
-				<button type="submit" class="b1">Log in</button>
-			</div>
-			<div class="rw sep">
-				<b>Forgot your password?</b>
-				<br>
-				<a asp-action="ForgotPassword">Enter your email address above and click here to receive a new one.</a>
-			</div>
-		</form>
-	</section>
+<h2>@ViewData["Title"].</h2>
+<div class="row">
+    <div class="col-md-8">
+        <section>
+            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                <h4>Use a local account to log in.</h4>
+                <hr />
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Email" class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="col-md-2 control-label"></label>
+                    <div class="col-md-10">
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <div class="checkbox">
+                            <label asp-for="RememberMe">
+                                <input asp-for="RememberMe" />
+                                @Html.DisplayNameFor(m => m.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <button type="submit" class="btn btn-default">Log in</button>
+                    </div>
+                </div>
+                <p>
+                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
+                </p>
+                <p>
+                    <a asp-action="ForgotPassword">Forgot your password?</a>
+                </p>
+            </form>
+        </section>
+    </div>
+    <div class="col-md-4">
+        <section>
+            <h4>Use another service to log in.</h4>
+            <hr />
+            @{
+                var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
+                if (loginProviders.Count == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                            for details on setting up this ASP.NET application to support logging in via external services.
+                        </p>
+                    </div>
+                }
+                else
+                {
+                    <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in loginProviders)
+                                {
+                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
 </div>
 
 @section Scripts {
-	@{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
