--- a/Extranet.mvc/Views/Shared/Layouts/Default.cshtml
+++ b/Extranet.mvc/Views/Shared/Layouts/Default.cshtml
@@ -1,40 +1,60 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Extranet</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - Extranet</title>
 
 	<link href="//fonts.googleapis.com/css?family=Hammersmith+One&amp;v1" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="~/favicon.ico" />
 
-    <environment names="Development">
-        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
-		<link rel="stylesheet" href="~/css/default.css" />
-		<link rel="stylesheet" href="~/css/wide.css" />
-    </environment>
-    <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+	<environment names="Development">
+		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="~/css/default.min.css" />
+	</environment>
+	<environment names="Staging,Production">
+		<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
+			  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+			  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
 		<link rel="stylesheet" href="~/css/default.min.css" asp-append-version="true" />
-        @*<link rel="stylesheet" href="~/css/wide.min.css" asp-append-version="true" />*@
-    </environment>
+	</environment>
 </head>
 <body>
-	<div id="c" class="container body-content">
-		<div class="in">
-			@Html.Partial("Header")
-			<div id="m">
-				<div id="r"><div class="in"><p>@RenderBody()</p></div></div>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a asp-controller="Home" asp-action="Index" class="navbar-brand">Extranet</a>
 			</div>
-			@Html.Partial("Footer")
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li><a asp-controller="Home" asp-action="Index">Home</a></li>
+					<li><a asp-controller="Home" asp-action="Sitemap">Sitemap</a></li>
+					<li><a asp-controller="Home" asp-action="Simple">Simple</a></li>
+					<li><a asp-controller="Home" asp-action="Error">Error</a></li>
+					<li><a asp-controller="Test" asp-action="Index">Test</a></li>
+					<li><a asp-controller="Test" asp-action="Test">Test</a></li>
+				</ul>
+				@await Html.PartialAsync("_LoginHeader")
+			</div>
 		</div>
+	</div>
+	<div class="container body-content">
+		@RenderBody()
+		<hr />
+		<footer>
+			@await Html.PartialAsync("_LoginFooter")
+		</footer>
 	</div>
 
 	<environment names="Development">
-		@*<script src="~/lib/jquery/dist/jquery.js"></script>
-		<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
+		<script src="~/lib/jquery/dist/jquery.js"></script>
+		<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="~/js/default.min.js" asp-append-version="true"></script>
 	</environment>
 	<environment names="Staging,Production">
