--- a/Extranet.mvc/wwwroot/css/Default.scss
+++ b/Extranet.mvc/wwwroot/css/Default.scss
@@ -1,16 +1,10 @@
-﻿body {
-  padding-top: 50px;
-  padding-bottom: 20px; }
+﻿body { padding-top: 50px; padding-bottom: 20px; }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
-.body-content {
-  padding-left: 15px;
-  padding-right: 15px; }
+.body-content { padding-left: 15px; padding-right: 15px; }
 
 /* Set widths on the form inputs since otherwise they're 100% wide */
 input,
 select,
-textarea {
-  max-width: 280px; }
-
+textarea { max-width: 280px; }
