--- a/Extranet.mvc/Views/_ViewImports.cshtml
+++ b/Extranet.mvc/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using Extranet
-@using Extranet.Models
-@using Extranet.Models.AccountViewModels
-@using Extranet.Models.ManageViewModels
+﻿@using Website
+@using Website.Models
+@using Website.Models.AccountViewModels
+@using Website.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
