--- a/Extranet.mvc/wwwroot/css/Default.scss
+++ b/Extranet.mvc/wwwroot/css/Default.scss
@@ -1,10 +1,7 @@
-﻿body { padding-top: 50px; padding-bottom: 20px; }
+﻿// import fonts
+//@import url(//fonts.googleapis.com/css?family=PT+Sans:400,700);
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content { padding-left: 15px; padding-right: 15px; }
+// include main template style sheets
+@import 'Includes/Common';
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea { max-width: 280px; }
+// include page specific style sheets
