--- a/Extranet.mvc/wwwroot/css/default.css
+++ b/Extranet.mvc/wwwroot/css/default.css
@@ -1,16 +1,10 @@
-﻿body {
+﻿* {
+  -ms-box-sizing: border-box !important;
+  -moz-box-sizing: border-box !important;
+  -webkit-box-sizing: border-box !important;
+  box-sizing: border-box !important; }
+
+body {
   padding-top: 50px;
   padding-bottom: 20px; }
-
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-  padding-left: 15px;
-  padding-right: 15px; }
-
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-  max-width: 280px; }
 
