Moved address book to account/addressbook

--- a/Extranet.mvc/Views/Manage/Index.cshtml
+++ b/Extranet.mvc/Views/Manage/Index.cshtml
@@ -21,6 +21,10 @@
                 <a asp-controller="Manage" asp-action="SetPassword" class="btn-bracketed">Create</a>
             }
         </dd>
+		<dt>Address Book:</dt>
+		<dd>
+			<a href="/Account/AddressBook" class="btn-bracketed">Manage</a>
+		</dd>
         <dt>External Logins:</dt>
         <dd>
 
