--- a/Extranet.mvc/Views/Account/AddressBook/Delete.cshtml
+++ b/Extranet.mvc/Views/Account/AddressBook/Delete.cshtml
@@ -1,29 +1,16 @@
 @model Website.Models.UserAddress
 
 @{
-    Layout = null;
+	ViewData["Title"] = "Delete";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>UserAddress</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.AddressType)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.AddressType)
-        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Area)
         </dt>
@@ -83,9 +70,7 @@
     <form asp-action="Delete">
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+			<a asp-controller="AddressBook" asp-action="Index">Back to List</a>
         </div>
     </form>
 </div>
-</body>
-</html>
