--- a/www.PinDigital.com/Views/Account/AddressBook/Delete.cshtml
+++ b/www.PinDigital.com/Views/Account/AddressBook/Delete.cshtml
@@ -4,6 +4,14 @@
 	ViewData["Title"] = "Delete";
 }
 
+@section Scripts{
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("input[type='submit']").click(function (e) { if (!confirm('Are you sure you want to delete this address?')) { e.preventDefault(); return false; } else return true; });
+		});
+	</script>
+}
+
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
