--- a/www.PinDigital.com/Views/Account/AddressBook/Create.cshtml
+++ b/www.PinDigital.com/Views/Account/AddressBook/Create.cshtml
@@ -1,14 +1,13 @@
 @model Website.Models.UserAddress
 
 @{
-	ViewData["Title"] = "Create";
+	ViewData["Title"] = "Add Address";
 }
 
-<h2>Create</h2>
+<h2>@ViewData["Title"]</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>UserAddress</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<input type="hidden" asp-for="UserId" />
