--- a/www.PinDigital.com/Views/Account/AddressBook/Delete.cshtml
+++ b/www.PinDigital.com/Views/Account/AddressBook/Delete.cshtml
@@ -1,7 +1,7 @@
 @model Website.Models.UserAddress
 
 @{
-	ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Delete Address";
 }
 
 @section Scripts{
@@ -12,11 +12,10 @@
 	</script>
 }
 
-<h2>Delete</h2>
+<h2>@ViewData["Title"]</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>UserAddress</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
