--- a/www.PinDigital.com/Views/Account/AddressBook/Edit.cshtml
+++ b/www.PinDigital.com/Views/Account/AddressBook/Edit.cshtml
@@ -1,14 +1,13 @@
 @model Website.Models.UserAddress
 
 @{
-	ViewData["Title"] = "Edit";
+	ViewData["Title"] = "Edit Address";
 }
 
-<h2>Edit</h2>
+<h2>@ViewData["Title"]</h2>
 
 <form asp-action="Edit">
 	<div class="form-horizontal">
-		<h4>UserAddress</h4>
 		<hr />
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<input type="hidden" asp-for="AddressId" />
