--- a/www.PinDigital.com/Views/Account/AddressBook/Index.cshtml
+++ b/www.PinDigital.com/Views/Account/AddressBook/Index.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Address Book";
 }
 
-<h2>Index</h2>
+<h2>@ViewData["Title"]</h2>
 
 <p><a asp-controller="AddressBook" asp-action="Create">Create New</a></p>
 
