--- a/www.PinDigital.com/Views/CMS/Index.cshtml
+++ b/www.PinDigital.com/Views/CMS/Index.cshtml
@@ -6,11 +6,14 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<p><a asp-controller="CMSPages" asp-action="Create">Create New</a></p>
+<p><a asp-action="Create">Create New</a></p>
 
 <table class="table">
 	<thead>
 		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Url)
+			</th>
 			<th>
 				@Html.DisplayNameFor(model => model.Status)
 			</th>
@@ -24,6 +27,9 @@
 		@foreach (var item in Model)
 		{
 			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Url)
+				</td>
 				<td>
 					@Html.DisplayFor(modelItem => item.Status)
 				</td>
