--- a/www.PinDigital.com/Views/Home/Sitemap.cshtml
+++ b/www.PinDigital.com/Views/Home/Sitemap.cshtml
@@ -5,16 +5,13 @@
 }
 <h2>@ViewData["Title"].</h2>
 
-<h3>Movies</h3>
+<h3>CMS</h3>
 <table class="table table-striped table-bordered table-hover table-responsive">
-	@foreach (var item in Model.movies)
+	@foreach (var item in Model.cms)
 	{
 		<tr>
 			<td>
-				@item.url
-			</td>
-			<td>
-				@item.id
+				<a href="/@item.url">@item.url</a>
 			</td>
 		</tr>
 	}
