just in case I lose everything.

--- a/www.PinDigital.com/Views/CMS/Render.cshtml
+++ b/www.PinDigital.com/Views/CMS/Render.cshtml
@@ -2,30 +2,8 @@
 
 @model Website.Models.CMSViewModel
 
-@removeTagHelper "*, Microsoft.AspNet.Mvc.Razor"
-@removeTagHelper "*, Microsoft.AspNetCore.Mvc.Razor"
-
 @{
-	ViewData["Title"] = Model.Page.Url;
+	ViewData["Title"] = Model.Page.Title;
 }
 
-@(Html.Kendo().Editor()
-	.Name("editor")
-	.HtmlAttributes(new { style = "height:440px" })
-	.Resizable(resizable => resizable.Content(true).Toolbar(true))
-	.ImageBrowser(imageBrowser => imageBrowser
-		.Image("~/cms/{0}")
-		.Read("Read", "ImageBrowser")
-		.Create("Create", "ImageBrowser")
-		.Destroy("Destroy", "ImageBrowser")
-		.Upload("Upload", "ImageBrowser")
-		.Thumbnail("Thumbnail", "ImageBrowser")
-	)
-	.FileBrowser(fileBrowser => fileBrowser
-		.File("~/cms/{0}")
-		.Read("Read", "FileBrowser")
-		.Create("Create", "FileBrowser")
-		.Destroy("Destroy", "FileBrowser")
-		.Upload("Upload", "FileBrowser")
-	)
-)
+@Html.Raw(Model.Content)
