--- a/www.PinDigital.com/Views/CMS/Editor.cshtml
+++ b/www.PinDigital.com/Views/CMS/Editor.cshtml
@@ -1,6 +1,6 @@
 @using Kendo.Mvc.UI
 
-@model Website.Models.CMSViewModel
+@model CMSViewModel
 
 @removeTagHelper "*, Microsoft.AspNet.Mvc.Razor"
 @removeTagHelper "*, Microsoft.AspNetCore.Mvc.Razor"
