More tidying and changes to sitemap functionality and format.

--- a/www.PinDigital.com/Views/Account/AccessDenied.cshtml
+++ b/www.PinDigital.com/Views/Account/AccessDenied.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Access Denied";
 }
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 <p>Sorry, but you don't currently have access to view this page.</p>
