--- a/www.PinDigital.com/Views/Account/ManageLogins.cshtml
+++ b/www.PinDigital.com/Views/Account/ManageLogins.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Manage your external logins";
 }
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 
 <p class="text-success">@ViewData["StatusMessage"]</p>
 @if (Model.CurrentLogins.Count > 0)
