--- a/www.PinDigital.com/Views/CMS/Create.cshtml
+++ b/www.PinDigital.com/Views/CMS/Create.cshtml
@@ -1,4 +1,4 @@
-@model Website.Models.CMSPage
+@model CMSPage
 
 @{
 	ViewData["Title"] = "Add Page";
@@ -11,24 +11,17 @@
 		<hr />
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="form-group">
+			<label asp-for="Title" class="col-md-2 control-label"></label>
+			<div class="col-md-10">
+				<input asp-for="Title" class="form-control" />
+				<span asp-validation-for="Title" class="text-danger"></span>
+			</div>
+		</div>
+		<div class="form-group">
 			<label asp-for="Url" class="col-md-2 control-label"></label>
 			<div class="col-md-10">
 				<input asp-for="Url" class="form-control" />
 				<span asp-validation-for="Url" class="text-danger"></span>
-			</div>
-		</div>
-		<div class="form-group">
-			<label asp-for="Status" class="col-md-2 control-label"></label>
-			<div class="col-md-10">
-				<input asp-for="Status" class="form-control" />
-				<span asp-validation-for="Status" class="text-danger"></span>
-			</div>
-		</div>
-		<div class="form-group">
-			<label asp-for="ModifiedDate" class="col-md-2 control-label"></label>
-			<div class="col-md-10">
-				<input asp-for="ModifiedDate" class="form-control" />
-				<span asp-validation-for="ModifiedDate" class="text-danger"></span>
 			</div>
 		</div>
 		<div class="form-group">
