--- a/www.PinDigital.com/Views/CMS/Details.cshtml
+++ b/www.PinDigital.com/Views/CMS/Details.cshtml
@@ -1,4 +1,4 @@
-@model Website.Models.CMSViewModel
+@model CMSViewModel
 
 @{
 	ViewData["Title"] = "Page Details";
@@ -87,6 +87,8 @@
 			<th>
 				@Html.DisplayNameFor(model => model.Versions[0].Content)
 			</th>
+			<th>
+			</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -99,6 +101,16 @@
 				</td>
 				<td>
 					@Html.DisplayFor(modelItem => item.Content)
+				</td>
+				<td>
+					@if (item.VersionId != Model.Page.VersionId)
+					{
+						<form asp-action="UseVersion">
+							@Html.HiddenFor(modelItem => item.Url)
+							@Html.HiddenFor(modelItem => item.VersionId)
+							<input type="submit" value="Use" class="btn btn-default" />
+						</form>
+					}
 				</td>
 			</tr>
 		}
