--- a/www.PinDigital.com/Views/CMS/Edit.cshtml
+++ b/www.PinDigital.com/Views/CMS/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Website.Models.CMSPage
+@model CMSPage
 
 @{
 	ViewData["Title"] = "Edit Page";
@@ -7,10 +7,17 @@
 <h2>@ViewData["Title"]</h2>
 
 <form asp-action="Edit">
-    <div class="form-horizontal">
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="Url" />
+	<div class="form-horizontal">
+		<hr />
+		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+		<input type="hidden" asp-for="Url" />
+		<div class="form-group">
+			<label asp-for="Title" class="col-md-2 control-label"></label>
+			<div class="col-md-10">
+				<input asp-for="Title" class="form-control" />
+				<span asp-validation-for="Title" class="text-danger"></span>
+			</div>
+		</div>
 		<div class="form-group">
 			<label asp-for="Url" class="col-md-2 control-label"></label>
 			<div class="col-md-10">
@@ -18,32 +25,29 @@
 				<span asp-validation-for="Url" class="text-danger"></span>
 			</div>
 		</div>
-        <div class="form-group">
-            <label asp-for="Status" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="ModifiedDate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="ModifiedDate" class="form-control" />
-                <span asp-validation-for="ModifiedDate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+		<div class="form-group">
+			<label asp-for="Status" class="col-md-2 control-label"></label>
+			<div class="col-md-10">
+				<select asp-for="Status" class="form-control">
+					<option value="0">Hidden</option>
+					<option value="1">Active</option>
+					<option value="2">Deleted</option>
+				</select>
+				<span asp-validation-for="Status" class="text-danger"></span>
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-md-offset-2 col-md-10">
+				<input type="submit" value="Save" class="btn btn-default" />
+			</div>
+		</div>
+	</div>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
