--- a/www.PinDigital.com/Views/Shared/Layouts/Default.cshtml
+++ b/www.PinDigital.com/Views/Shared/Layouts/Default.cshtml
@@ -74,7 +74,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li><a asp-controller="Home" asp-action="Index">Home</a></li>
+					<li><a asp-controller="Home" asp-action="Index"><span class="glyphicon glyphicon-home"></span>Home</a></li>
 					<li><a asp-controller="Home" asp-action="Sitemap">Sitemap</a></li>
 					<li><a asp-controller="Home" asp-action="Simple">Simple</a></li>
 					<li><a asp-controller="Home" asp-action="Error">Error</a></li>
