--- a/www.PinDigital.com/Views/CMS/Index.cshtml
+++ b/www.PinDigital.com/Views/CMS/Index.cshtml
@@ -33,8 +33,8 @@
 				<td class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 					@Html.DisplayFor(modelItem => item.Page.Title)
 				</td>
-				<td class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-					@Html.DisplayFor(modelItem => item.Page.Url)
+				<td class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+					<a href="@item.Page.Url">@item.Page.Url</a>
 				</td>
 				<td class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
 					@Html.DisplayFor(modelItem => item.Page.Status)
@@ -42,9 +42,9 @@
 				<td class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
 					@Html.DisplayFor(modelItem => item.Page.ModifiedDate)
 				</td>
-				<td class="col-lg-2 col-md-2 col-sm-2 col-xs-2 text-center">
-					<a asp-action="Edit" asp-route-url="@item.Page.Url" class="btn btn-sm btn-default">Edit</a>
-					<a asp-action="Delete" asp-route-url="@item.Page.Url" class="btn btn-sm btn-default">Delete</a>
+				<td class="col-lg-1 col-md-1 col-sm-1 col-xs-1 text-center">
+					<a asp-action="Edit" asp-route-url="@item.Page.Url" class="glyphicon glyphicon-edit"></a>
+					<a asp-action="Delete" asp-route-url="@item.Page.Url" class="glyphicon glyphicon-trash"></a>
 				</td>
 			</tr>
 		}
